corrected text overflow wrap

--- a/app/assets/stylesheets/components/_section.scss
+++ b/app/assets/stylesheets/components/_section.scss
@@ -9,4 +9,5 @@
 
 .contact-page {
   margin-top: 150px;
+  overflow-wrap: break-word;
 }
